@@ -22,7 +22,7 @@
 
 <body>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="agility.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../agility.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
 </html>
