@@ -1,6 +1,17 @@
 2011.12.11, Version 0.1.1
 
-* 
+* gh-pages is now production branch, master is development
+
+* Documents are now hosted in docs/ in master (to be periodically merged with gh-pages)
+
+* pre: and post: event prefixes (Tristan Slominski)
+
+* before() and after() DOM insertion methods (Fabio Ferrari)
+
+* New method isAgility() (Tristan Slominski)
+
+* Bug fixes and new unit tests (thanks Tristan Slominski, David Ascher, Fabio Ferrari)
+
 
 2011.07.21, Version 0.1.0
 
